# argos-monitor

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  boot.sh  justfile  neelu_README.md  readme.md  second-stage-linker-script.x
.cargo/: config.toml
.github/workflows/: test.yaml
C/: Makefile  build_riscv.sh
C/microbenchmarks/: .gitignore  Makefile  README.md  TODO.md
C/scripts/: attestation_startup.sh  install_drivers.sh  mount_ubuntu.sh  mount_ubuntu_riscv64.sh  riscv64_install_drivers.sh  run_eapp.sh  x86_64_install_drivers.sh
Rust/extern-crate/: Kbuild  Makefile  driver_main.rs
Rust/hello-world/: Kbuild  Makefile  hello_world.rs
Rust/ioctl-example/: Kbuild  Makefile  ioctl_example.rs
Rust/memory-allocation/: Kbuild  Makefile  memory_allocation.rs
boot_toolchain/: Cargo.toml  readme.md
boot_toolchain/src/: main.rs
configs/: Makefile_nested  Makefile_td0  README_td0.md  busybox-riscv.config  busybox-x86.config  init.sh  linux-riscv.config  linux-x86-nested-confidential.config  linux-x86-nested.config  linux-x86-nested.config-notyche  linux-x86-ramfs.config  linux-x86.config  linux-x86.config-notyche  riscv-linker-script-domain.x  riscv-linker-script.x  riscv_init.sh  vf2-riscv-linker-script.x  x86-linker-rust.x  x86_init.sh
crates/: Makefile
crates/attest_client/: Cargo.toml
crates/attestation/: Cargo.toml
crates/attestation/src/: hashing.rs  hashing.rs.sha256  hashset.rs  lib.rs  signature.rs  signature.rs.ed25519
crates/bricks/: Cargo.toml
crates/capabilities/: Cargo.toml
crates/capability-engine/: Cargo.toml  readme.md
crates/capability-engine/fuzz/: Cargo.toml
crates/capability-engine/fuzz/fuzz_targets/: engine.rs
crates/libtyche/: Cargo.toml
crates/logger/: Cargo.toml
crates/mmu/: Cargo.toml
crates/monitor/: Cargo.toml
crates/qemu/: Cargo.toml
crates/qemu/src/: lib.rs  riscv64.rs  x86_64.rs
crates/riscv_csrs/: Cargo.toml
crates/riscv_pmp/: Cargo.toml
crates/riscv_sbi/: Cargo.toml
crates/riscv_sbi/src/: ecall.rs  ipi.rs  lib.rs  rfence.rs  trap.rs
crates/riscv_serial/: Cargo.toml
crates/riscv_tyche/: Cargo.toml
crates/riscv_utils/: Cargo.toml
crates/stage_two_abi/: Cargo.toml
crates/tychools/: Cargo.toml  readme.md
crates/tychools/src/: allocator.rs  attestation.rs  debug.rs  elf_modifier.rs  instr.rs  instrument.rs  loader.rs  main.rs  new_attestation.rs  objcopy.rs  page_table_mapper.rs  tychools_const.rs
crates/tychools/templates/: app  enclave  manifest.json  manifest_compat.json  trt  untrusted
crates/vga/: Cargo.toml
crates/vmx/: Cargo.toml
crates/vtd/: Cargo.toml
crates/x2apic/: Cargo.toml
debugger/: .gdb_history  Makefile  README.md  debugger  debugger_script.gdb  main.c
design/: 001-design-doc.md  002-removing-contexts.md  003-trap-handling.md  004-pmp-overflow.md  005-exit-on-interrupts.md  006-saved-restored-domain-contexts.md  007-region-access-rights.md  008-sdktyche-overview.md  009-attestation.md  010-trusted-runtime-bricks.md
docs/: hardware_acronyms_cheatsheet.md
docs/boot/: boot_and_pci_discovery.md
guest/: .gdb_history  Makefile  main.c  rawc
monitor/first-stage/: Cargo.toml
monitor/first-stage/src/: acpi_handler.rs  apic.rs  cpu.rs  getsec.rs  idt.rs  lib.rs  main.rs  print.rs  second_stage.rs  segments.rs  serial.rs
monitor/first-stage/src/acpi/: mod.rs  tables.rs
monitor/first-stage/src/allocator/: fallback.rs  global.rs  mod.rs
monitor/first-stage/src/elf/: ffi.rs  mod.rs
monitor/first-stage/src/guests/: boot_params.rs  common.rs  linux.rs  mod.rs  rawc.rs  vmx.rs  void.rs
monitor/first-stage/src/mmu/: frames.rs  mod.rs
monitor/first-stage/src/smp/: mod.rs  trampoline.S
monitor/second-stage/: Cargo.toml
monitor/second-stage/src/: allocator.rs  arena.rs  calls.rs  debug.rs  error.rs  free_list.rs  guest.rs  hypercalls.rs  lib.rs  logging.rs  main.rs  statics.rs
monitor/second-stage/src/riscv/: arch.rs  backend.rs  guest.rs  mod.rs
monitor/second-stage/src/x86_64/: arch.rs  backend.rs  guest.rs  init.rs  mod.rs  monitor.rs  vmx_helper.rs
monitor/tyche/: Cargo.toml
monitor/tyche/src/: allocator.rs  attestation_domain.rs  calls.rs  debug.rs  error.rs  lib.rs  main.rs  monitor.rs  rcframe.rs  statics.rs  sync.rs
monitor/tyche/src/riscv/: arch.rs  context.rs  filtered_fields.rs  guest.rs  init.rs  mod.rs  monitor.rs  platform.rs  riscv_tpm_attestation.rs  state.rs
monitor/tyche/src/x86_64/: apic.rs  arch.rs  context.rs  cpuid_filter.rs  exposed_vmx_fields.rs  filtered_fields.rs  guest.rs  init.rs  mod.rs  monitor.rs  perf.rs  platform.rs  state.rs  vmx_helper.rs
new-vm-scripts/: tyche-convert-image.sh  tyche-create-new-vm.sh
scripts/: README.md  capture_variable.py  debug_server.py  debugger.gdb  format.sh  mod_switch.sh  sampling.sh  tyche-gdb  tyche-gdb.gdb  tyche_debug.py  tyche_guest_memory_dump.py
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  print.rs  qemu.rs  serial.rs  vga.rs  vmx.rs  vtd.rs
targets/: riscv-unknown-kernel.json
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
vmm/first-stage/: Cargo.toml
vmm/first-stage/src/: acpi_handler.rs  apic.rs  cpu.rs  gdt.rs  getsec.rs  idt.rs  interrupts.rs  lib.rs  main.rs  print.rs  qemu.rs  second_stage.rs  serial.rs  smx.rs  vtd.rs
vmm/first-stage/src/acpi/: mod.rs
vmm/first-stage/src/allocator/: mod.rs
vmm/first-stage/src/debug/: info.rs
vmm/first-stage/src/elf/: mod.rs
vmm/first-stage/src/guests/: common.rs  elf.rs  elf_program.rs  identity.rs  linux.rs  mod.rs  rawc.rs  vmx.rs  void.rs
vmm/first-stage/src/mmu/: eptmapper.rs  frames.rs  mod.rs  ptmapper.rs  walker.rs
vmm/first-stage/src/smp/: mod.rs  trampoline.S
vmm/first-stage/src/vmx/: check.rs  fields.rs  mod.rs
vmm/second-stage/: Cargo.toml
vmm/second-stage/src/: :w  allocator.rs  arch.rs  arena.rs  buddy_allocator.rs  debug.rs  frame_allocator.rs  guest.rs  hypercalls.rs  lib.rs  main.rs  statics.rs  vcpu.rs
vmm/second-stage/src/guest/: mod.rs  vmx.rs
vmm/second-stage/src/riscv/: guest.rs  mod.rs
vmm/second-stage/src/x86_64/: arch.rs  guest.rs  mod.rs  vcpu.rs
(+565 files in other folders)
