[package]
name = "kernel"
version = "0.1.0"
authors = ["CharlyCst <castes.ch@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "boot_toolchain",
]

[dependencies]
bootloader = { version = "0.10.12" }
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.9"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
bitflags = "1.3.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootloader]
map-physical-memory = true

[[test]]
name = "stack_overflow"
harness = false

