[package]
name = "kernel"
version = "0.1.0"
authors = ["CharlyCst <castes.ch@gmail.com>"]
edition = "2021"

[workspace]
resolver = "2"
members = [
    "vmm/first-stage",
    "vmm/second-stage",
    "vmm/fake-acm",
    "crates/stage_two_abi",
    "crates/vmx",
    "crates/vtd",
    "crates/mmu",
    "crates/qemu",
    "crates/debug",
    "crates/utils",
    "crates/libtyche",
    "boot_toolchain",
]

[features]
# Print to VGA text mode
vga = ["font8x8"]

# Guest
guest_linux = []
guest_rawc = []

[dependencies]
bootloader = { version = "0.10.12" }
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.9"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
bitflags = "1.3.2"

[dependencies.font8x8]
version = "0.2.5"
default-features = false
features = ["unicode"]
optional = true

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootloader]
map-physical-memory = true

[[test]]
name = "stack_overflow"
harness = false

[profile.release]
opt-level = "s"
