[package]
name = "boot_toolchain"
version = "0.1.0"
edition = "2018"

[dependencies]
runner-utils = "0.0.2"          # small helper functions for custom runners (e.g. timeouts)
bootloader-locator = "0.0.4"    # for locating the `bootloader` dependency on disk
locate-cargo-manifest = "0.2.0" # for locating the kernel's `Cargo.toml`

