[package]
name = "attestation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
sha2 = "0.6.0"
# sha2 = {version = "0.10.7", default-features = false}
rsa = {version = "0.9.2", default-features = false}
rand_core = {version = "0.6.4"}

[dev-dependencies.simple_logger]
default-features = false
features = ["colors"]
version = "4.1.0"