[package]
name = "attestation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.17" }
ed25519-compact = {path = "../../crates/forked_signature"}
sha2 = "0.6.0"

[dev-dependencies.simple_logger]
default-features = false
features = ["colors"]
version = "4.1.0"