[package]
name = "attestation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
ed25519-compact = {path = "../../vendor/forked_signature"}
# sha2 = { version = "0.9.1", default-features = false }
blake3 = { version = "1.5.4", default-features = false }

[dev-dependencies.simple_logger]
default-features = false
features = ["colors"]
version = "4.1.0"