[package]
name = "riscv_sbi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv_csrs = { path = "../riscv_csrs/" }
log = { workspace = true }
spin = { workspace = true }
riscv_utils = { path = "../riscv_utils/" }
capa-engine = { path = "../capability-engine/" }
