[package]
name = "tychools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
elf = "0.7.2"
elfloader = "0.16.0"
goblin = "0.6.1"
log = "0.4.17"
simple_logger = "4.1.0"
mmu = { version = "0.1.0", path = "../mmu"}
xmas-elf = "0.8.0"
utils = {path = "../utils"}
object = {version = "0.31.0", features =["write", "std"]}
serde = { version ="1.0.163", features = ["derive"]}
serde_json = "1.0.96"
nix = { version = "0.26.2", features = ["ioctl"]}
num = "0.4.0"
libc = "0.2.146"
ioctl-sys = "0.8.0"
