[package]
name = "first-stage"
version = "0.1.0"
edition = "2021"

[features]
# Print to VGA text mode
vga = ["dep:vga"]
bare_metal = []

# Guest
guest_linux = []
guest_rawc = []
no_guest = []
second-stage = []

[dependencies]
# Internal
stage_two_abi = { path = "../../crates/stage_two_abi" }
vmx = { path = "../../crates/vmx" }
vtd = { path = "../../crates/vtd" }
mmu = { path = "../../crates/mmu" }
qemu = { path = "../../crates/qemu/" }
debug = { path = "../../crates/debug" }
vga = { path = "../../crates/vga/", optional = true }

# External
bootloader = { version = "0.10.13" }
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.9"
bitflags = "1.3.2"
x2apic = "0.4.1"
acpi = "4.1.1"
x86 = "0.52.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootloader]
map-physical-memory = true
