[package]
name = "second-stage"
version = "0.1.0"
edition = "2021"

[features]
# Print to VGA text mode
vga = ["dep:vga"]

[dependencies]
riscv_utils = { path = "../../crates/riscv_utils/" }
utils = { path = "../../crates/utils/" }
debug = { version = "0.1.0", path = "../../crates/debug" }
mmu = { version = "0.1.0", path = "../../crates/mmu" }
stage_two_abi = { path = "../../crates/stage_two_abi" }
vga = { path = "../../crates/vga/", optional = true }
arena = {path = "../../crates/arena"}
capabilities = {path = "../../crates/capabilities/"}
monitor = {path = "../../crates/monitor"}

# TODO: move the untrusted dependencies behing a feature flag
qemu = { path = "../../crates/qemu/" }
spin = "0.9.4"

[target.'cfg(target_arch = "x86_64")'.dependencies]
vtd = { path = "../../crates/vtd" }
vmx = { version = "0.1.0", path = "../../crates/vmx" }

[target.'cfg(target_arch = "risc64")'.dependencies]
