[package]
name = "tyche"
version = "0.1.0"
edition = "2021"

[features]
# Print to VGA text mode
vga = ["dep:vga"]

[dependencies]
log = { workspace = true }
spin = { workspace = true }
utils = { path = "../../crates/utils/" }
debug = { version = "0.1.0", path = "../../crates/debug" }
logger = { path = "../../crates/logger/" }
mmu = { version = "0.1.0", path = "../../crates/mmu" }
stage_two_abi = { path = "../../crates/stage_two_abi" }
vga = { path = "../../crates/vga/", optional = true }
arena = {path = "../../crates/arena"}
capa-engine = {path = "../../crates/capability-engine/"}

# TODO: move the untrusted dependencies behing a feature flag
qemu = { path = "../../crates/qemu/" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
vtd = { path = "../../crates/vtd" }
vmx = { version = "0.1.0", path = "../../crates/vmx" }

[target.'cfg(target_arch = "riscv64")'.dependencies]
#lazy_static = { version = "1.4.0", features = ["spin_no_std"] } 
riscv_utils = { path = "../../crates/riscv_utils/" }
riscv_tyche = { path = "../../crates/riscv_tyche/" }
riscv_csrs = { path = "../../crates/riscv_csrs/" }
riscv_sbi = { path = "../../crates/riscv_sbi/" }
riscv_pmp = { path = "../../crates/riscv_pmp/" }

