[package]
name = "first-stage"
version = "0.1.0"
edition = "2021"

[features]
# Print to VGA text mode
vga = ["font8x8"]

# Guest
guest_linux = []
guest_rawc = []
second-stage = []

[dependencies]
bootloader = { version = "0.10.12" }
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.9"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
bitflags = "1.3.2"

[dependencies.font8x8]
version = "0.2.5"
default-features = false
features = ["unicode"]
optional = true

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootloader]
map-physical-memory = true
